# A2_Project

./: .gitignore  .gitmodules  LAB2.md  MTRN4231Base.STL  Pizza_Cutter.STL  Pizza_Spatula.STL  README.md  build.sh  launch.sh  runAll.sh
CAD/: Arm.SLDPRT  Full Assembly.SLDASM  Full_jig.SLDASM  MTRN4231Base.SLDPRT  Sides.SLDPRT  Tool_Jig.SLDPRT  Top.SLDPRT  insert_side.SLDPRT
CAD /: MTRN4231Base.SLDPRT  mtrn4231Gripper.SLDPRT
Computer_Vision/: mtrn4231Gripper.SLDPRT
Computer_Vision/src/image_warper/: setup.py
Computer_Vision/src/install/: local_setup.sh  setup.sh
Computer_Vision/src/log/: latest_build
doc/: architecture.md  node_diagram.drawio
end_effector/rviz/: display.rviz
end_effector/urdf/: end_eff.urdf
install/: local_setup.sh  setup.sh
launch/: A2.xml
log/: latest_build
src/MTRN4231_Servo_Control/: MTRN4231_Servo_Control.ino
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: system_launch.py
src/demo_moveit_ur/: CMakeLists.txt
src/demo_moveit_ur/install/: local_setup.sh  setup.sh
src/demo_moveit_ur/log/: latest_build
src/demo_moveit_ur/src/: moveit_trajectory.cpp
src/end_effector/: CMakeLists.txt  package.xml
src/end_effector/launch/: display.launch.py
src/end_effector/rviz/: display.rviz
src/end_effector/urdf/: end_eff.urdf
src/high_level_control/: CMakeLists.txt  package.xml
src/high_level_control/include/: high_level_control.hpp
src/high_level_control/launch/: high_level_control_launch.py
src/high_level_control/src/: high_level_control.cpp
src/image_warper/image_warper/: ImagePublisher.py  image_warper.py
src/lab2_ball_estimation/: package.xml  setup.cfg  setup.py
src/lab2_ball_estimation/lab2_ball_estimation/: pose_estimation.py
src/lab2_moveit/: CMakeLists.txt  package.xml
src/lab2_transformation/: CMakeLists.txt  package.xml
src/lab2_transformation/src/: dynamic_ball_transform.cpp
src/moveit_ur/: CMakeLists.txt  package.xml
src/moveit_ur/include/: moveit_trajectory.hpp
src/moveit_ur/install/: local_setup.sh  setup.sh
src/moveit_ur/install/moveit_ur/share/ament_index/resource_index/parent_prefix_path/: moveit_ur
src/moveit_ur/install/moveit_ur/share/moveit_ur/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/moveit_ur/install/moveit_ur/share/moveit_ur/cmake/: moveit_urConfig.cmake
src/moveit_ur/launch/: moveit_trajectory_launch.py
src/moveit_ur/log/: latest_build
src/moveit_ur/meshes/: Pizza_Cutter.STL
src/moveit_ur/src/: moveit_trajectory.cpp
src/pizza_cutter/: CMakeLists.txt  package.xml
src/pizza_cutter/launch/: display.launch.py
src/pizza_cutter/urdf/: pizza_cutter.urdf
src/pizza_spatula/: CMakeLists.txt  package.xml
src/pizza_spatula/rviz/: display.rviz
src/ure_pizza_cutter/: CMakeLists.txt  package.xml
src/ure_pizza_spatula/: CMakeLists.txt  package.xml
src/util_keyboard/: package.xml  setup.py
src/util_keyboard/launch/: util_keyboard.launch.py  util_keyboard_launch.py
src/util_keyboard/util_keyboard/: util_keyboard.py
ure_pizza_cutter/urdf/: ur_with_pizza_cutter.xacro
ure_pizza_spatula/rviz/: display.rviz
ure_pizza_spatula/urdf/: ur_with_pizza_spatula.xacro
(+30 files in other folders)
